Fixed vertical spacing

--- a/style.css
+++ b/style.css
@@ -35,3 +35,8 @@ h3, b {
 td:first-child {
     padding-right: 1.5rem;
 }
+
+section {
+    margin: 2rem 0;
+}
+
